# innolux

./: .gitignore  README.md  pyproject.toml
notebooks/T1 6212 重啟/: u-shape.ipynb  元件確認.ipynb
notebooks/T1 6634 6053 製程改善/: eda.ipynb  seal_om.ipynb
notebooks/T2 6117 ZIX-7061XX TR 3.5/: EDA.ipynb  LC Pattern.ipynb
notebooks/T2 6628 BP 3500 A ZIX-7061 S-NP13 S-WB141/: around_gap.ipynb  test.ipynb
notebooks/example_project/: example-notebooks.ipynb
notebooks/others/: fill_group_excel.ipynb
notebooks/材料大地圖/: demo.ipynb  demo_20250918.xlsx  material_name_alignment.ipynb
src/innolux/: UShape.py  __init__.py  data_processing.py  fabs.py  visualization.py
tests/data/: t1_eda_raw_test.xlsx  t1_eda_summary_test.xlsx  t1_qtime_raw_test.xlsx
