[project]
name = "innolux"
version = "0.1.0"
description = "Innolux data analysis functions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "plotly>=6.3.0",
    "polars>=1.33.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
