[project]
name = "innolux"
version = "0.1.0"
description = "Innolux data analysis functions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "polars[all]>=1.33.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "shortuuid>=1.0.13",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
